2003-05-11  Andreas Schwab  <schwab@suse.de>

	* Makerules: Always use -MP together with -MD.
	(sed-remove-dotot): Substitute $(..) also at start of line.
	($(stdio_lim:h=st)): Use -MD instead of SUNPRO_DEPENDENCIES.
	Generated defines with a single compiler call.
	Use $(sed-remove-dotdot).
	* mach/Makefile ($(objpfx)mach-syscalls.mk): Use -MD instead
	of DEPENDENCIES_OUTPUT, and use $(sed-remove-objpfx).
	* sysdeps/unix/sysv/linux/Makefile ($(objpfx)syscall-%.h):
	Use -MD instead of SUNPRO_DEPENDENCIES, and use $(sed-remove-objpfx).
	* sysdeps/unix/sysv/linux/mips/Makefile
	($(objpfx)syscall-%.h): Likewise.

2003-05-28  Roland McGrath  <roland@redhat.com>

	* malloc/malloc.h [! __GNUC__] (__const): Define if undefined.

2003-05-26  Aldy Hernandez  <aldyh@redhat.com>

	* soft-fp/soft-fp.h (FP_EX_UNDERFLOW): Define to 0.

2003-05-28  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/setcontext.S: Pass fourth argument to
	rt_sigprocmask system call.
	* sysdeps/unix/sysv/linux/ia64/ucontext_i.h (SC_MASK): Fix value.
	From Peter A. Buhr <pabuhr@plg2.math.uwaterloo.ca>.

2003-05-28  Ulrich Drepper  <drepper@redhat.com>

	* include/libc-symbols.h: Define hidden attribute for real also if
	LIBC_NONSHARED is defined.  Patch by Jakub Jelinek.

	* csu/Makefile: Add rules to build Scrt1.o.
	* sysdeps/i386/elf/start.S: Make code compilable with SHARED.
	* sysdeps/x86_64/elf/start.S: Likewise.

2003-05-27  Jakub Jelinek  <jakub@redhat.com>

	* stdio-common/vfprintf.c (process_arg, process_string_arg): Use
	pa_int/pa_u_int instead of pa_short_int, pa_u_short_int and pa_char.
	* stdio-common/printf-parse.h (union printf_arg): Remove pa_char,
	pa_short_int, pa_u_short_int and pa_float.

2003-05-26  Jakub Jelinek  <jakub@redhat.com>

	* libio/strops.c (_IO_str_init_static): Change into a wrapper around
	_IO_str_init_static_internal.
	(_IO_str_init_static_internal): Moved from _IO_str_init_static,
	change size argument to _IO_size_t, don't limit sprintf to 64M.