@@ -1,3 +1,8 @@
+2003-05-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/powerpc/powerpc32/elf/start.S: Make code compilable with
+	SHARED.
+
 2003-05-11  Andreas Schwab  <schwab@suse.de>
 
 	* Makerules: Always use -MP together with -MD.
